--- a/core/app/views/Shipments/index.html
+++ b/core/app/views/Shipments/index.html
@@ -1,10 +1,12 @@
 #{extends 'main_full.html' /}
 #{set title:'运输单列表 (' + shipments.size() + ')' /}
+#{set 'moreStyles'}
+    #{stylesheet 'bootstrap-multiselect.css'/}
+#{/set}
 #{set 'moreScripts'}
-    #{script 'component/pagination.coffee'/}
+    #{script 'bootstrap-multiselect.js'/}
     #{script 'shipments/index.coffee'/}
 #{/set}
-
 #{info_row}
 <ul>
   <li>带有 <i style="color:#dc143c;" class="icon-warning-sign"></i> 符号表示此运输单没有创建者,没有确认负责人,需要进行确认</li>
@@ -46,12 +48,13 @@
       #{/list}
       </select>
 
-      <select name="p.whouseId" style="width: 150px;" class="inline selectize">
-        <option value="">运往仓库</option>
-      #{list items:whouses, as:'wh'}
-        <option ${wh.id == p.whouseId ? 'selected' : ''} value="${wh.id}">${wh.name()}</option>
-      #{/list}
-      </select>
+      <div class="input-prepend inline">
+        <select name="p.whouseId" style="width:150px;" id="whouse_id" multiple="multiple">
+        #{list items:whouses, as:'wh'}
+          <option ${wh.id == p.whouseId ? 'selected' : ''} value="${wh.id}">${wh.name()}</option>
+        #{/list}
+        </select>
+      </div>
 
       <select name="p.cooperId" style="width: 150px;" class="inline selectize">
         <option value="">运输商</option>
@@ -59,19 +62,18 @@
         <option ${p.cooperId == cooper.id ? 'selected' : ''} value="${cooper.id}">${cooper.name}</option>
       #{/list}
       </select>
-    </div>
-  </div>
-  <div class="row-fluid">
-    <div class="span12">
-      <select name="p.states" class="inline selectize" multiple="multiple" size="6">
-      #{list items:models.procure.Shipment.S.values(), as:'state'}
-        <option value="${state.name()}" ${p.states.contains(state) ? 'selected' : ''}>${state.label()}</option>
-      #{/list}
-      </select>
+
+      <div class="input-prepend inline">
+        <select name="p.states" id="states" multiple="multiple" style="width:150px;">
+        #{list items:models.procure.Shipment.S.values(), as:'state'}
+          <option value="${state.name()}" ${p.states.contains(state) ? 'selected' : ''}>${state.label()}</option>
+        #{/list}
+        </select>
+      </div>
+
       <div class="input-append input-prepend inline">
         <span class="add-on"><i class="icon-search"></i></span>
         <input type="text" name="p.search" value="${p.search}" placeHolder="自动识别 ID 搜索">
-        <input type="hidden" name="p.page" value="${p.page}">
         <button data-url='@{Shipments.index()}' class="btn btn-primary" data-disable-with='提交中...'>搜索</button>
       </div>
       <div class="inline">
@@ -104,9 +106,3 @@
     </div>
   </div>
 </form>
-
-<div class="row-fluid" id="order_list">
-  <div class="span12">
-  #{bootstrap_pager pi:p, url:'' /}
-  </div>
-</div>
