--- a/core/app/views/Shipments/_shipment_list.html
+++ b/core/app/views/Shipments/_shipment_list.html
@@ -1,23 +1,22 @@
 <table class="table table-condensed table-bordered" id="shipmentTable">
   <tr>
     <th style="width:2%"><input type="checkbox" class="checkbox_all" value="0"/></th>
-    <th style="width:3%">#</th>
+    <th style="width:10% ">#</th>
     <th style="width:15%">Track No.</th>
     <th style="width:10%">运输商</th>
     <th style="width:5%">国际快递</th>
     <th style="width:5%">运输方式</th>
     <th style="width:10%">去往仓库</th>
-    <th style="width:5%">目的地</th>
     <th style="width:10%">状态</th>
     <th style="width:8%">预计开始时间</th>
     <th style="width:8%">创建时间</th>
     <th style="width:8%">预计到库时间</th>
-    <th style="width:10%">创建者</th>
+    <th style="width:8%">创建者</th>
   </tr>
 #{list items:shipments, as:'ship'}
   <tr>
     <td>
-      <input type="checkbox" name="shipmentId" value="${ship.id}" apply="${ship.apply}" way="${ship.type}">
+      <input type="checkbox" name="shipmentId" value="${ship.id}" apply="${ship.applyId}" way="${ship.type}">
     </td>
     <td>
       <a target="_blank" href="@{Shipments.show(ship.id)}">${ship.id}</a>
@@ -27,18 +26,17 @@
       #{list items:ship.tracknolist, as:'trackno'}
         ${trackno+" "}
       #{/list}
-      <span class="badge badge-info">${ship.items.size()}</span>
+      <span class="badge badge-info">${ship.itemsNum}</span>
     </td>
-    <td>${ship.cooper?.name}</td>
-    <td>${ship.internationExpress}</td>
+    <td>${ship.cname}</td>
+    <td>${ship.iExpressName}</td>
     <td style="color:${ship.type.rgb()}">${ship.type.label()}</td>
-    <td>${ship.whouse?.name()}</td>
-    <td>${ship.target}</td>
+    <td>${ship.wname}</td>
     <td style="color:${ship.state.rgb()}">${ship.state.label()}</td>
     <td>#{time_tooltip time:ship.dates.planBeginDate/}</td>
     <td>#{time_tooltip time:ship.createDate/}</td>
     <td>#{time_tooltip time:ship.dates.planArrivDate/}</td>
-    <td>${ship.creater?.username}</td>
+    <td>${ship.uname}</td>
   </tr>
 
 #{/list}
