*  出货计划 ID -> 物料采购 ID

--- a/core/app/views/OutboundRecords/index.html
+++ b/core/app/views/OutboundRecords/index.html
@@ -91,7 +91,7 @@
           <th>ID</th>
           <th>出库类别</th>
           <th>状态</th>
-          <th>出货计划 ID</th>
+          <th>物料采购 ID</th>
           <th>SKU</th>
           <th>产品名称</th>
           <th>FBA</th>
