--- a/core/app/views/Products/_newattach.html
+++ b/core/app/views/Products/_newattach.html
@@ -1,5 +1,4 @@
 <div class="row-fluid">
-  <iframe frameBorder=0 scrolling=no src='https://e.easyacc.com:8081/index.php?explorer/index&path=SKU/${pro
-  .sku}' width=
-  "100%" height="1000px"></iframe>
+  <iframe frameBorder=0 scrolling=no src='http://127.0.0.1:8081/index.php?explorer/index&path=SKU/${pro.sku}'
+          width="100%" height="1000px"></iframe>
 </div>
