*  全局化 bootstrap-multiselect 插件

--- a/core/app/views/_js_header.html
+++ b/core/app/views/_js_header.html
@@ -14,6 +14,7 @@
 #{script 'dateinput.js'/}
 #{script 'selectize.js'/}
 #{script 'bootstrap-datetimepicker.min.js'/}
+#{script 'bootstrap-multiselect.js'/}
 #{script 'component/notify.coffee'/}
 #{script 'component/popover.coffee'/}
 #{script 'main.js'/}
