--- a/core/app/views/_css_header.html
+++ b/core/app/views/_css_header.html
@@ -5,5 +5,6 @@
 #{stylesheet 'selectize.default.css'/}
 #{stylesheet 'dateinput.css'/}
 #{stylesheet 'bootstrap-datetimepicker.min.css'/}
+#{stylesheet 'bootstrap-multiselect.css'/}
 #{stylesheet 'main.css'/}
 
