--- a/core/app/views/ProcureUnits/index.html
+++ b/core/app/views/ProcureUnits/index.html
@@ -40,10 +40,8 @@
 
         <select name="p.stage" class="inline" style="width:82px;">
           <option value="">阶段</option>
-        #{list items:models.procure.ProcureUnit.STAGE.values(), as:'stage'}
-            #{if stage.label() != '审批中'}
-              <option ${stage == p.stage ? 'selected' : ''} value="${stage.name()}">${stage.label()}</option>
-            #{/if}
+        #{list items:models.procure.ProcureUnit.stages(), as:'stage'}
+          <option ${stage == p.stage ? 'selected' : ''} value="${stage.name()}">${stage.label()}</option>
         #{/list}
         </select>
 
@@ -54,26 +52,21 @@
         #{/list}
         </select>
 
-        <select name="p.isPlaced" class="inline">
-          <option value="">是否抵达货代处</option>
-        #{list items:models.view.post.ProcurePost.PLACEDSTATE, as:'t'}
-          <option ${t == p.isPlaced  ? 'selected' : ''} value="${t.name()}">${t.label()}</option>
-        #{/list}
-        </select>
-
-        <select name="p.isOut" class="inline">
-          <option value="">是否出库</option>
-        #{list items:models.procure.ProcureUnit.OST.values(), as:'o'}
-          <option ${o == p.isOut ? 'selected' : ''} value="${o.name()}">${o.label()}</option>
-        #{/list}
-        </select>
-
-        <select name="p.cooperatorId" class="inline selectize">
+        <select name="p.cooperatorId" class="inline selectize" style="width:100px;">
           <option value="">供应商</option>
         #{list items:cooperators, as:'cop'}
           <option ${cop.id == p.cooperatorId ? 'selected' : ''} value="${cop.id}">${cop.name}</option>
         #{/list}
         </select>
+
+        <div class="inline">
+          <select name="p.categories" class="inline" multiple data-nonSelectedText="产品线">
+          #{list items:categories, as:'c'}
+            <option ${p.categories.contains(c) ? 'selected' : ''} value="${c}">${c}</option>
+          #{/list}
+          </select>
+        </div>
+
         <div class="input-prepend input-append inline">
           <span class="add-on"><i class="icon-search"></i></span>
           <input type="text" class="input-medium" name="p.search" placeholder="sellingId or SKU" value="${p.search}">
@@ -84,19 +77,9 @@
     </div>
     <div class="row-fluid">
       <div class="span12">
-        <div class="input-prepend input-append inline">
-          <a href="@{ProcureUnits.planView(tomorrow1)}" class="btn btn-primary" rel="popover"
-             content="明天需要交货的采购计划" data-disable-with="loading">明天计划</a>
-          <a href="@{ProcureUnits.planView(tomorrow2)}" class="btn btn-primary" rel="popover"
-             content="后天需要交货的采购计划" data-disable-with="loading">后天计划</a>
-          <a href="@{ProcureUnits.planView(tomorrow3)}" class="btn btn-primary" rel="popover"
-             content="第三天需要交货的采购计划" data-disable-with="loading">大后天计划</a>
-          <a href="@{ProcureUnits.noPlaced()}" class="btn btn-primary" rel="popover" content="发货时间为当天,
-              同时货物还没有抵达货代的采购计划" data-disable-with="loading">当天未抵达</a>
-        </div>
-
         <div class="inline">
           <input type="hidden" name="p.unitIds" id="unitIds"/>
+          <a target="_blank" href="@{ProcureUnits.blank()}" class="btn btn-primary inline">创建采购计划</a>
           <a target="_blank" class="btn btn-primary inline" rel="popover" content="将选中的数据，按照日期-工厂名称进行压缩打包 " id="downloadFBAZIP">
             <i class="icon-download-alt"></i>下载ZIP
           </a>
@@ -107,7 +90,6 @@
         #{/power.ck}
         </div>
       #{include 'Deliveryments/box_number_model.html'/}
-
       </div>
     </div>
   </form>
