--- a/core/app/views/tags/time_tooltip.html
+++ b/core/app/views/tags/time_tooltip.html
@@ -2,9 +2,12 @@
 datetime:true? default: false
 short:true? default: false
 }*
-#{if _short}
-<a href="javascript:void(0);" rel="tooltip" title="${_datetime ? _time.datetime() : _time.date()}">${_time.los()}</a>
+#{if _time != null}
+    #{if _short}
+    <a href="javascript:void(0);" rel="tooltip" title="${_datetime ? _time.datetime() : _time.date()}">${_time.los()}</a>
+    #{/if}
+    #{else }
+    <a href="javascript:void(0);" rel="tooltip" title="${_time.los()}">${_datetime ? _time.datetime() : _time.date()}</a>
+    #{/else}
 #{/if}
-#{else }
-<a href="javascript:void(0);" rel="tooltip" title="${_time.los()}">${_datetime ? _time.datetime() : _time.date()}</a>
-#{/else}
+
