--- a/core/app/views/ProcureUnits/_unit_list.html
+++ b/core/app/views/ProcureUnits/_unit_list.html
@@ -1,78 +1,56 @@
 #{set tr_key: key ? key : 'unit'/}
 <table class="table table-condensed table-bordered">
   <tr>
-  #{if checkbox}
     <th>
       <label class="checkbox">
         <input type="checkbox" id="${key ? tr_key + '_' : ''}checkbox_all" class="${tr_key} checkall">
       </label>
     </th>
-  #{/if}
-    <th>#</th>
-    <th>Selling</th>
-    <th>Sku</th>
-    <th>FBA-ShipmentId</th>
-    <th>采购单</th>
-    <th>仓库</th>
-    <th>供应商</th>
-    <th>采购数量</th>
-
-  #{if deliveryplan!=true}
-    <th>单价</th>
-    <th rel="popover" content="如果交货, 数量为交货数量, 如果没有交货,则为计划采购数量">
-      <abbr title=" ">总价</abbr>
-    </th>
-    <th>剩余请款金额</th>
-  #{/if}
-    <th rel="popover" content="<img src='/img/helper/fnsku.png' />" width="auto">FnSku</th>
-    <th>运输方式</th>
-    <th>预计交货时间</th>
-    <th>预计运输时间</th>
-    <th>实际交货时间</th>
+    <th style="width:40px;">#</th>
     <th>阶段</th>
-    <th>抵达货代</th>
-    <th>是否出库</th>
-    <th>是否发货</th>
-    <th>质检信息</th>
+    <th width="90px;">操作</th>
+    <th>Selling ID</th>
+    <th>Sku</th>
+    <th style="width:10%;">产品名称</th>
+    <th>数量(计划/交货/入库)</th>
+    <th>预计交货时间</th>
+    <th>FBA-ShipmentId</th>
+    <th>FnSku</th>
+    <th>仓库</th>
+    <th>预计运输时间</th>
+    <th>预计到达时间</th>
+    <th>运输单</th>
+    <th>运输方式</th>
     <th>创建时间</th>
+    <th>创建人</th>
   </tr>
 #{list items:units, as:'unit'}
   <tr id="procureUnit_${unit.id}">
-      #{if checkbox}
-        <td>
-          <label class="checkbox">
-            <input type="checkbox" name="pids" value="${unit.id}" class="${tr_key}" id="checkbox_${unit.id}"
-                   boxNum="${unit.recommendBoxNum()}">
-          </label>
-        </td>
-      #{/if}
-    <td data-toggle="toggle" data-target="#${tr_key}_${unit.id}" style="cursor:pointer;">
-      <i class="icon-reorder"></i> ${unit.id}</td>
+    <td>
+      <label class="checkbox">
+        <input type="checkbox" name="pids" value="${unit.id}" class="${tr_key}" id="checkbox_${unit.id}"
+               boxNum="${unit.recommendBoxNum()}">
+      </label>
+    </td>
+    <td>${unit.id}</td>
+    <td style="background:${unit.stage.rgb()}">${unit.stage.label()}</td>
+    <td>
+        #{if unit.stage.name()=='PLAN'}
+          <a href="#" class="btn btn-mini btn-primary">修改</a>
+        #{/if}
+        #{elseif unit.stage.name()=='DELIVERY'}
+          <a href="#" class="btn btn-mini btn-warning">分拆</a>
+        #{/elseif}
+      <a href="#" class="btn btn-mini btn-info">查看</a>
+    </td>
     <td class="selling_id">
       <a href="@{Sellings.selling(unit.selling?.sellingId)}" target="_blank">${unit.selling?.sellingId}</a>
     </td>
-    <td>
-      <a href="@{Products.show(unit.sku)}" target="_blank" rel="popover" content="${unit.cooperator?.cooperItem(unit.sku)?.memo}">${unit.sku}</a>
-    </td>
-    <td>
-    ${unit.fba?.shipmentId}
-    </td>
-    <td>
-        #{if unit.deliveryment}
-          <a href="@{Deliveryments.show(unit.deliveryment.id)}">${unit.deliveryment.id}</a>
-        #{/if}
-    </td>
-    <td>${unit.whouse?.name()}</td>
-    <td>${unit.cooperator?.name}</td>
-    <td>${unit.attrs.planQty}</td>
-
-      #{if deliveryplan!=true}
-        <td>${unit.attrs.currency.symbol()} ${new java.math.BigDecimal(unit.attrs.price).setScale(2,4).floatValue().format('#,###.##')}</td>
-        <td>${unit.attrs.currency.symbol()} ${new java.math.BigDecimal(unit.qty() * unit.attrs.price).setScale(2,4).floatValue().format('#,###.##')}</td>
-        <td>${unit.attrs.currency.symbol()} ${new java.math.BigDecimal(unit.leftAmount()).setScale(2,4).floatValue().format('#,###.##')}</td>
-      #{/if}
-
-
+    <td><a href="@{Products.show(unit.sku)}" target="_blank">${unit.sku}</a></td>
+    <td>${unit.product.abbreviation}</td>
+    <td></td>
+    <td>#{time_tooltip time:unit.attrs.planDeliveryDate/}</td>
+    <td>${unit.fba?.shipmentId}</td>
     <td>
       <!-- FnSku 下载 Label -->
         #{if unit.selling?.fnSku}
@@ -86,22 +64,18 @@
           </a>
         #{/elseif}
     </td>
-    <td style="color:${unit.shipType.rgb()}">${unit.shipType?.label()}</td>
-    <td>#{time_tooltip time:unit.attrs.planDeliveryDate/}</td>
+    <td>${unit.whouse?.name()}</td>
     <td>#{time_tooltip time:unit.attrs.planShipDate /}</td>
-    <td>#{time_tooltip time:unit.attrs.deliveryDate/}</td>
-    <td style="background:${unit.stage.rgb()}">${unit.stage.label()}</td>
-    <td id="isplaced_${unit.id}">#{yesOrNo f:unit.isPlaced/}</td>
-    <td>${unit.isOut?.label()}</td>
-    <td>${unit.isship()}</td>
-    <td>#{if unit.fetchCheckTaskLink() != null}<a href="${unit.fetchCheckTaskLink()}" target="_blank">查看</a>#{/if}</td>
+    <td>#{time_tooltip time:unit.attrs.planArrivDate /}</td>
+    <td></td>
+    <td style="color:${unit.shipType.rgb()}">${unit.shipType?.label()}</td>
     <td>#{time_tooltip time:unit.createDate/}</td>
+    <td>${unit.creator?.username}</td>
   </tr>
 
   <tr id="${tr_key}_${unit.id}" style="display:none;">
     <td colspan="${checkbox ? '23' : '22'}">
       <div class="row-fluid" id="actions_${unit.id}">
-
         <div class="span3">
           <dl>
             <dt>Comment</dt>
@@ -183,7 +157,7 @@
                       分拆
                     </a>
                   #{/power.ck}
-                  <!-- 确认到货代处 -->
+                <!-- 确认到货代处 -->
                   #{if unit.selling}
                       #{ifnot unit.isPlaced}
                         <a data-remote='true' data-method='PUT' class="btn btn-small btn-info" id="isplaced_${unit.id}_btn"
@@ -193,15 +167,15 @@
                       #{/ifnot}
                   #{/if}
               </div>
-              #{if unit.fba}
-                #{power.ck 'fbas.update'}
-                  <div class="btn-toolbar">
-                    <a href="@{FBAs.changeFBA(unit.id)}" class="btn btn-small btn-warning" data-disable-with='处理中...'
-                       title="由于FBA过期或者需要更换">更换 ${unit.fba?.shipmentId}
-                    </a>
-                  </div>
-                #{/power.ck}
-              #{/if}
+                #{if unit.fba}
+                    #{power.ck 'fbas.update'}
+                      <div class="btn-toolbar">
+                        <a href="@{FBAs.changeFBA(unit.id)}" class="btn btn-small btn-warning" data-disable-with='处理中...'
+                           title="由于FBA过期或者需要更换">更换 ${unit.fba?.shipmentId}
+                        </a>
+                      </div>
+                    #{/power.ck}
+                #{/if}
               <div class="btn-toolbar">
                   #{if unit.fba}
                     <a href="@{FBAs.packingSlip(unit.fba.id)}" target="_blank" class="btn btn-small btn-success">箱內麦</a>
