--- a/core/app/views/ProcureUnits/index.html
+++ b/core/app/views/ProcureUnits/index.html
@@ -7,15 +7,8 @@
 #{errorMsgs /}
 #{flash_alert /}
 
-#{info_row}
-<ul>
-  <li>当搜索的[阶段]为 PLAN 的时候, 则自动开启 添加采购单 功能</li>
-  <li>当搜索的[阶段]为 DELIVERY 的时候, 则自动开启 添加出货单 功能</li>
-</ul>
-#{/info_row}
-
 <div class="row-fluid">
-  <form action="@{ProcureUnits.index()}" method="get" class="search_form" id="search_Form">
+  <form action="@{ProcureUnits.indexForMarket()}" method="get" class="search_form" id="search_Form">
     <div class="row-fluid">
       <div class="span12">
         <div class="input-prepend input-append inline">
@@ -31,19 +24,19 @@
         #{/list}
         </select>
 
-        <select name="p.whouseId" class="inline">
-          <option value="0">仓库</option>
-        #{list items:whouses, as:'wh'}
-          <option ${wh.id == p.whouseId ? 'selected' : ''} value="${wh.id}">${wh.name}</option>
-        #{/list}
-        </select>
-
         <select name="p.stage" class="inline" style="width:82px;">
           <option value="">阶段</option>
         #{list items:models.procure.ProcureUnit.STAGE.values(), as:'stage'}
             #{if stage.label() != '审批中'}
               <option ${stage == p.stage ? 'selected' : ''} value="${stage.name()}">${stage.label()}</option>
             #{/if}
+        #{/list}
+        </select>
+
+        <select name="p.whouseId" class="inline">
+          <option value="0">仓库</option>
+        #{list items:whouses, as:'wh'}
+          <option ${wh.id == p.whouseId ? 'selected' : ''} value="${wh.id}">${wh.name}</option>
         #{/list}
         </select>
 
@@ -54,60 +47,28 @@
         #{/list}
         </select>
 
-        <select name="p.isPlaced" class="inline">
-          <option value="">是否抵达货代处</option>
-        #{list items:models.view.post.ProcurePost.PLACEDSTATE, as:'t'}
-          <option ${t == p.isPlaced  ? 'selected' : ''} value="${t.name()}">${t.label()}</option>
-        #{/list}
-        </select>
-
-        <select name="p.isOut" class="inline">
-          <option value="">是否出库</option>
-        #{list items:models.procure.ProcureUnit.OST.values(), as:'o'}
-          <option ${o == p.isOut ? 'selected' : ''} value="${o.name()}">${o.label()}</option>
-        #{/list}
-        </select>
-
-        <select name="p.cooperatorId" class="inline selectize">
-          <option value="">供应商</option>
-        #{list items:cooperators, as:'cop'}
-          <option ${cop.id == p.cooperatorId ? 'selected' : ''} value="${cop.id}">${cop.name}</option>
-        #{/list}
-        </select>
         <div class="input-prepend input-append inline">
           <span class="add-on"><i class="icon-search"></i></span>
-          <input type="text" class="input-medium" name="p.search" placeholder="sellingId or SKU" value="${p.search}">
+          <input type="text" class="input-medium" name="p.search" style="width:300px;" value="${p.search}"
+                 placeholder="采购计划ID、Selling ID、SKU、FBA、产品名称">
           <input type="hidden" name="p.page" value="${p.page}">
+          <input type="hidden" name="p.unitIds" id="unitIds"/>
           <button class="btn btn-primary" data-loading>搜索</button>
         </div>
       </div>
     </div>
     <div class="row-fluid">
       <div class="span12">
-        <div class="input-prepend input-append inline">
-          <a href="@{ProcureUnits.planView(tomorrow1)}" class="btn btn-primary" rel="popover"
-             content="明天需要交货的采购计划" data-disable-with="loading">明天计划</a>
-          <a href="@{ProcureUnits.planView(tomorrow2)}" class="btn btn-primary" rel="popover"
-             content="后天需要交货的采购计划" data-disable-with="loading">后天计划</a>
-          <a href="@{ProcureUnits.planView(tomorrow3)}" class="btn btn-primary" rel="popover"
-             content="第三天需要交货的采购计划" data-disable-with="loading">大后天计划</a>
-          <a href="@{ProcureUnits.noPlaced()}" class="btn btn-primary" rel="popover" content="发货时间为当天,
-              同时货物还没有抵达货代的采购计划" data-disable-with="loading">当天未抵达</a>
-        </div>
-
-        <div class="inline">
-          <input type="hidden" name="p.unitIds" id="unitIds"/>
-          <a target="_blank" class="btn btn-primary inline" rel="popover" content="将选中的数据，按照日期-工厂名称进行压缩打包 " id="downloadFBAZIP">
-            <i class="icon-download-alt"></i>下载ZIP
-          </a>
-          <a target="_blank" href="@{ProcureUnits.exportLogs()}" class="btn btn-primary inline">导出修改日志</a>
-        #{power.ck "procures.downloadreports"}
-          <a href="javascript:void(0)" id="download_excel" class="btn btn-success">
-            <i class="icon-download-alt"></i>导出采购计划</a>
-        #{/power.ck}
-        </div>
+        <a href="@{ProcureUnits.planView(tomorrow1)}" class="btn btn-primary" data-disable-with="loading">批量创建FBA</a>
+        <a href="@{ProcureUnits.blank()}" class="btn btn-success" data-disable-with="loading">创建采购计划</a>
+        <a target="_blank" class="btn btn-info" id="downloadFBAZIP">
+          <i class="icon-download-alt"></i>下载FBA ZIP包
+        </a>
+      #{power.ck "procures.downloadreports"}
+        <a href="javascript:void(0)" id="download_excel" class="btn btn-info">
+          <i class="icon-download-alt"></i>导出采购计划</a>
+      #{/power.ck}
       #{include 'Deliveryments/box_number_model.html'/}
-
       </div>
     </div>
   </form>
@@ -116,7 +77,7 @@
 <form method="post" id="create_deliveryment">
   <div class="row-fluid">
     <div class="span12">
-    #{render 'ProcureUnits/_unit_list.html', units: p.query(), p:p, checkbox:true/}
+    #{render 'ProcureUnits/_unit_market_list.html', units: p.query(), p:p, checkbox:true/}
     </div>
   </div>
 
@@ -132,18 +93,6 @@
           </div>
         #{/power.ck}
     #{/if}
-
-    #{if !p.stage || p.stage == models.procure.ProcureUnit.STAGE.DELIVERY}
-
-      <div class="input-append">
-        <input type="text" id="name_deliverplan" name="name" value="${name}" placeHolder="出货单的别名(必须)">
-        <button id="create_deliverplan_btn" class="btn btn-primary" data-disable-with='添加中'>
-          添加出货单
-        </button>
-      </div>
-
-    #{/if}
-
     </div>
   </div>
 </form>
