--- a/core/app/views/ProcureUnits/index.html
+++ b/core/app/views/ProcureUnits/index.html
@@ -1,5 +1,5 @@
 #{extends 'main_full.html' /}
-#{set title:"采购单元列表 (${p.count()})"  /}
+#{set title:"采购单元列表 (${units.size()})"  /}
 #{set 'moreScripts'}
     #{script 'component/pagination.coffee'/}
     #{script 'procureunits/index.coffee'/}
@@ -13,7 +13,6 @@
   <li>当搜索的[阶段]为 DELIVERY 的时候, 则自动开启 添加出货单 功能</li>
 </ul>
 #{/info_row}
-
 <div class="row-fluid">
   <form action="@{ProcureUnits.index()}" method="get" class="search_form" id="search_Form">
     <div class="row-fluid">
@@ -52,7 +51,7 @@
         #{/list}
         </select>
 
-        <select name="p.cooperatorId" class="inline selectize" style="width:100px;">
+        <select name="p.cooperatorId" class="inline selectize" style="width:130px;">
           <option value="">供应商</option>
         #{list items:cooperators, as:'cop'}
           <option ${cop.id == p.cooperatorId ? 'selected' : ''} value="${cop.id}">${cop.name}</option>
@@ -69,65 +68,38 @@
 
         <div class="input-prepend input-append inline">
           <span class="add-on"><i class="icon-search"></i></span>
-          <input type="text" class="input-medium" name="p.search" placeholder="sellingId or SKU" value="${p.search}">
+          <input type="text" class="input-medium" name="p.search" value="${p.search}" rel="popover"
+                 content="可搜索 ID、SellingId、SKU、FBA、产品名称">
           <input type="hidden" name="p.page" value="${p.page}">
           <button class="btn btn-primary" data-loading>搜索</button>
         </div>
-      </div>
-    </div>
-    <div class="row-fluid">
-      <div class="span12">
+
         <div class="inline">
           <input type="hidden" name="p.unitIds" id="unitIds"/>
-          <a target="_blank" href="@{ProcureUnits.blank()}" class="btn btn-primary inline">创建采购计划</a>
-          <a target="_blank" class="btn btn-primary inline" rel="popover" content="将选中的数据，按照日期-工厂名称进行压缩打包 " id="downloadFBAZIP">
-            <i class="icon-download-alt"></i>下载ZIP
+        #{power.ck "procures.createdeliveryment"}
+          <a target="_blank" href="@{ProcureUnits.blank()}" class="btn btn-info" id="createdeliveryment">创建采购单</a>
+        #{/power.ck}
+          <a target="_blank" href="@{ProcureUnits.blank()}" class="btn btn-info" id="createdeliverplan">创建出货单</a>
+          <a target="_blank" class="btn btn-info" rel="popover" content="将选中的数据，按照日期-工厂名称进行压缩打包 " id="downloadFBAZIP">
+            下载 FBA ZIP
           </a>
-          <a target="_blank" href="@{ProcureUnits.exportLogs()}" class="btn btn-primary inline">导出修改日志</a>
+          <a target="_blank" href="@{ProcureUnits.exportLogs()}" class="btn btn-info">导出修改日志</a>
         #{power.ck "procures.downloadreports"}
-          <a href="javascript:void(0)" id="download_excel" class="btn btn-success">
-            <i class="icon-download-alt"></i>导出采购计划</a>
+          <a href="javascript:void(0)" id="download_excel" class="btn btn-info">
+            导出采购计划</a>
         #{/power.ck}
         </div>
-      #{include 'Deliveryments/box_number_model.html'/}
+      </div>
+    #{include 'Deliveryments/box_number_model.html'/}
+    </div>
+  </form>
+
+  <form method="post" id="create_deliveryment">
+    <div class="row-fluid">
+      <div class="span12">
+      #{render 'ProcureUnits/_unit_list.html', units: units, p:p, checkbox:true/}
       </div>
     </div>
   </form>
-</div>
-
-<form method="post" id="create_deliveryment">
-  <div class="row-fluid">
-    <div class="span12">
-    #{render 'ProcureUnits/_unit_list.html', units: p.query(), p:p, checkbox:true/}
-    </div>
-  </div>
-
-  <div class="row-fluid">
-    <div class="span12">
-    #{if !p.stage || p.stage == models.procure.ProcureUnit.STAGE.PLAN}
-        #{power.ck "procures.createdeliveryment"}
-          <div class="input-append">
-            <input type="text" id="name_input" name="name" value="${name}" placeHolder="采购单的别名(必须)">
-            <button id="create_deliveryment_btn" class="btn btn-primary" data-disable-with='添加中'>
-              添加采购单
-            </button>
-          </div>
-        #{/power.ck}
-    #{/if}
-
-    #{if !p.stage || p.stage == models.procure.ProcureUnit.STAGE.DELIVERY}
-
-      <div class="input-append">
-        <input type="text" id="name_deliverplan" name="name" value="${name}" placeHolder="出货单的别名(必须)">
-        <button id="create_deliverplan_btn" class="btn btn-primary" data-disable-with='添加中'>
-          添加出货单
-        </button>
-      </div>
-
-    #{/if}
-
-    </div>
-  </div>
-</form>
-
 #{records records:logs/}
+</div>
