--- a/core/app/views/ProcureUnits/_unit_list.html
+++ b/core/app/views/ProcureUnits/_unit_list.html
@@ -29,7 +29,7 @@
     <td>
       <label class="checkbox">
         <input type="checkbox" name="pids" value="${unit.id}" class="${tr_key}" id="checkbox_${unit.id}"
-               boxNum="${unit.recommendBoxNum()}">
+               boxNum="${unit.recommendBoxNum()}" data-stage="${unit.stage?.name()}">
       </label>
     </td>
     <td>${unit.id}</td>
