*  click 事件绑定错误

--- a/core/app/views/ProcureUnits/index.html
+++ b/core/app/views/ProcureUnits/index.html
@@ -77,9 +77,9 @@
 
         <div class="inline">
         #{power.ck "procures.createdeliveryment"}
-          <a target="_blank" href="@{ProcureUnits.blank()}" class="btn btn-info" id="createdeliveryment">创建采购单</a>
+          <a target="_blank" href="javascript:void(0)" class="btn btn-info" id="createdeliveryment">创建采购单</a>
         #{/power.ck}
-          <a target="_blank" href="@{ProcureUnits.blank()}" class="btn btn-info" id="createdeliverplan">创建出货单</a>
+          <a target="_blank" href="javascript:void(0)" class="btn btn-info" id="createdeliverplan">创建出货单</a>
           <a target="_blank" class="btn btn-info" rel="popover" content="将选中的数据，按照日期-工厂名称进行压缩打包 " id="downloadFBAZIP">
             下载 FBA ZIP
           </a>
