--- a/core/app/views/DeliverPlans/show.html
+++ b/core/app/views/DeliverPlans/show.html
@@ -15,44 +15,50 @@
 
 <div class="row-fluid">
   <div class="span12">
-    <form  method="post" id="plan_form">
+    <form method="post" id="plan_form">
       <table class="table table-condensed table-bordered">
         <tr>
           <th>Id</th>
-          <td>
+          <td colspan="2">
             <span id="deliverymentId">${dp.id}</span>
             <input type="hidden" name="dp.id" value="${dp.id}">
           </td>
-          <th>CreateDate</th>
-          <td>
-            <input type="text" readonly="" disabled="" class="input-medium" name="dp.createDate" value="${dp.createDate
-            .datetime()}">
-          </td>
         </tr>
 
         <tr>
-          <th>Name</th>
-          <td colspan="1">
+          <th>出货单名称</th>
+          <td>
             <input type="text" class="span10" name="dp.name" value="${dp.name}">
           </td>
 
-          <th>User</th>
-          <td>${dp.handler.username}</td>
+          <th>供应商</th>
+          <td>
+            <select name="dp.cooperator.id" class="selectize" style="width:150px;">
+              <option>请选择</option>
+            #{list items:cooperators, as:'c'}
+              <option ${c.id == dp.cooperator?.id} value="${c.id}">${c.name}</option>
+            #{/list}
+            </select>
+          </td>
         </tr>
         <tr>
-          <th>供应商</th>
-          <td>${dp.cooperator?.name}</td>
-          <th>状态</th>
-          <td>${dp.state.label()}</td>
+          <th>创建日期</th>
+          <td>
+            <input type="text" readonly="" disabled="" class="input-medium" name="dp.createDate"
+                   value="${dp.createDate.datetime()}">
+          </td>
+
+          <th>创建者</th>
+          <td>${dp.handler?.username}</td>
         </tr>
 
         <tr>
           <td colspan="6">
-            <h4>Memo:</h4>
+            <h4>备注:</h4>
             <textarea rows="5" name="dp.memo" class="span12">${dp.memo}</textarea>
             <button id="plan_update_btn" class="btn btn-primary">更新</button>
             <a href="@{Excels.deliverplans(dp.id)}" class="btn btn-primary" target="_blank"><i
-                   class="icon-download-alt"></i>导出出仓单</a>
+                class="icon-download-alt"></i>导出出仓单</a>
           </td>
         </tr>
       </table>
@@ -74,8 +80,7 @@
 <form action="#" id="bulkpost" method="POST">
   <div class="row-fluid">
     <div class="span12" id="unit_list">
-    #{render 'ProcureUnits/_unit_list.html', units:dp.units, checkbox:true, key:'delivery', delivery:true,
-    deliveryplan:true/}
+    #{render 'ProcureUnits/_unit_list.html', units:dp.units, checkbox:true, key:'delivery', delivery:true,deliveryplan:true/}
     </div>
   </div>
   <div class="row-fluid">
