--- a/core/app/views/Deliveryments/show.html
+++ b/core/app/views/Deliveryments/show.html
@@ -9,7 +9,6 @@
 #{/set}
 
 #{errorMsgs /}
-
 #{flash_alert /}
 
 <div class="row-fluid">
@@ -28,12 +27,12 @@
         </tr>
 
         <tr>
-          <th>采购单名称</th>
+          <th><span style="color:red">*</span>采购单名称</th>
           <td>
-            <input type="text" class="input-block-level" name="dmt.name" value="${dmt.name}">
+            <input type="text" class="input-block-level" name="dmt.name" value="${dmt.name}" required>
           </td>
 
-          <th>供应商</th>
+          <th><span style="color:red">*</span>供应商</th>
           <td>
             <select name="dmt.cooperator.id" class="selectize" style="width:150px;">
             #{list items:cooperators, as:'c'}
