--- a/core/app/views/DeliverPlans/show.html
+++ b/core/app/views/DeliverPlans/show.html
@@ -57,7 +57,7 @@
             <h4>备注:</h4>
             <textarea rows="5" name="dp.memo" class="span12">${dp.memo}</textarea>
             <div style="margin-top:10px;">
-              <button id="plan_update_btn" class="btn btn-primary">更新</button>
+              <a href="javascript:void(0)" class="btn btn-primary" id="plan_update_btn">更新</a>
               <a href="@{Excels.deliverplans(dp.id)}" class="btn btn-primary" target="_blank"><i
                   class="icon-download-alt"></i>导出出仓单</a>
             </div>
