--- a/core/app/views/ProcureUnits/_unit_table_trs.html
+++ b/core/app/views/ProcureUnits/_unit_table_trs.html
@@ -1,66 +1,61 @@
-*{需要
-* ProcueUnit: unit
-* Whouse: whouses
-}*
 <tr>
   <th style="width:100px;">SellingId</th>
   <td style="width:650px;">
-    <input type="text" name="unit.selling.sellingId" id="sellingId" style="width:300px;" value="${unit.selling?.sellingId}">
+    <input type="text" name="unit.selling.sellingId" id="sellingId" style="width:300px;" value="${unit.selling?.sellingId}"
+    #{if unit.selling?.sellingId} readonly #{/if}>
   </td>
   <th style="width:100px;">SKU</th>
   <td>
-    <input type="text" name="unit.product.sku" id="unit_sku" value="" required>
+    <input type="text" name="unit.product.sku" id="unit_sku" value="${unit.selling?.listing.product.sku}"
+    #{if unit.selling?.listing.product.sku} readonly #{/if}required>
   </td>
 </tr>
 <tr>
-  <th>供应商</th>
+  <th>产品名称</th>
   <td>
-    <select name="unit.cooperator.id" native='true'>
-      <option>请选择</option>
-    #{if unit.selling != null}
-        #{list items:unit.selling?.listing.product.cooperators(), as:'c'}
-          <option value="${c.id}" #{if c.id == unit.cooperator?.id}selected#{/if}>${c.name}</option>
-        #{/list}
-    #{/if}
-    </select>
-    <span style="width:200px;display:${unit.period?: 'none'}" id="unit_period">（生产周期：${unit.period}天）</span>
+    <input type="text" id="productName" style="width:300px;" value="${unit.selling?.listing.product.abbreviation}"
+    #{if unit.selling?.listing.product.abbreviation} readonly #{/if}required>
   </td>
-
-  <th>价格</th>
+  <th>阶段</th>
   <td>
-    <input type="text" class="span2" id="unit_price" name="unit.attrs.price" value="${unit.attrs.price}">
-  #{pickCurrency id:'unit_currency', name:'unit.attrs.currency', class:'span1', c:unit.attrs.currency?:helper.Currency.CNY /}
+    <span style="color:${unit.stage.rgb()}">${unit.stage.label()}</span>
   </td>
 </tr>
 
 <tr>
-  <th>采购数量</th>
-  <td>
-    <input type="text" class="input-mini" placeHolder="具体数量" name="unit.attrs.planQty" id="planQty"
-           value="${unit.attrs.planQty}">
-    <input type="text" id="box_num" class="input-mini" placeHolder="箱数">
-    <span class="add-on">箱</span>
-    <input type="hidden" name="unit.attrs.qty" value="${unit.attrs.qty}">
-  </td>
   <th>预计交货日期</th>
   <td>
-    <input type="date" name="unit.attrs.planDeliveryDate" value="${unit.attrs.planDeliveryDate.date()}">
+    <input type="date" name="unit.attrs.planDeliveryDate" value="${unit.attrs.planDeliveryDate.date()}" required>
   #{if oldplanDeliveryDate!=null}
     <span class="add-on">比原预计交货日期${oldplanDeliveryDate.date()}推迟${(unit.attrs
     .planDeliveryDate.getTime()-oldplanDeliveryDate.getTime())/(24*60*60*1000)}天</span>
   #{/if}
     <input type="hidden" name="unit.attrs.deliveryDate" value="${unit.attrs.deliveryDate.date()}">
   </td>
+  <th>去往仓库</th>
+  <td>
+    <select name="unit.whouse.id" id="warehouse_select">
+      <option value="">请选择</option>
+    #{list items:whouses, as:'w'}
+      <option value="${w.id}">${w.name}</option>
+    #{/list}
+    </select>
+  </td>
 </tr>
 
 <tr>
-  <th>采购取样</th>
-  <td>
-    <input type="text" name="unit.purchaseSample" value="${unit.purchaseSample}"/><span class="add-on">个</span>
-  </td>
-  <th>质检取样</th>
-  <td>
-    <input type="text" value="${unit.fetchCheckTaskQcSample()}" readonly/><span class="add-on">个</span>
+  <th>采购数量</th>
+  <td colspan="3">
+    <input type="text" class="input-mini" placeHolder="具体数量" name="unit.attrs.planQty" id="planQty"
+           value="${unit.attrs.planQty}">
+    <input type="text" id="box_num" class="input-mini" placeHolder="箱数">
+    <span class="add-on">箱</span>
+    <input type="hidden" name="unit.attrs.qty" value="${unit.attrs.qty}">
+    &nbsp;&nbsp;&nbsp;
+    <select id="cooperator" name="unit.cooperator.id">
+      <option value="">供应商参考</option>
+    </select>
+    <span id="coop_text"></span>
   </td>
 </tr>
 
@@ -71,21 +66,8 @@
   </td>
   <th>预计到库时间</th>
   <td>
-    <div class="input-append">
-      <input type="date" name="unit.attrs.planArrivDate" value="${unit.attrs.planArrivDate.date()}">
-      <span class="add-on">? 天</span>
-    </div>
-  </td>
-</tr>
-
-<tr>
-  <th>去往仓库</th>
-  <td>
-  #{select 'unit.whouse.id', items: whouses, labelProperty: 'name', value: unit.whouse?.id}#{/select}
-  </td>
-  <th>阶段</th>
-  <td>
-    <span style="color:${unit.stage.rgb()}">${unit.stage.label()}</span>
+    <input type="date" name="unit.attrs.planArrivDate" value="${unit.attrs.planArrivDate.date()}">
+    <span class="add-on">? 天</span>
   </td>
 </tr>
 
@@ -94,8 +76,7 @@
   <td>
   #{list items:models.procure.Shipment.T.values(), as:'t'}
     <label class="radio">
-      <input type="radio" name="unit.shipType" value="${t.name()}" ${ t == unit.shipType ? 'checked': 'unchecked'}>
-    ${t.label()}
+      <input type="radio" name="unit.shipType" value="${t.name()}" ${ t == unit.shipType ? 'checked': 'unchecked'}>${t.detail()}
     </label>
   #{/list}
   </td>
