--- a/core/app/views/Orders/generate_invoice_pdf.html
+++ b/core/app/views/Orders/generate_invoice_pdf.html
@@ -35,13 +35,6 @@
       border:1px solid;
       text-align:center;
     }
-
-    .div1{
-      border-bottom:0px;
-      padding-left:0px;
-      width:99.7%;
-      height:100px;
-    }
   </style>
 </head>
 <body>
@@ -52,18 +45,16 @@
       </strong><br>
     ${invoiceformat.date}: ${new org.joda.time.DateTime(ord.createDate).toString("dd/MM/yyyy")}  </strong>
     </td>
-    <td rowspan="4" class="td2">
-      <div class="div1"></div>
+    <td class="td2">
+    #{if (ord.market==models.market.M.AMAZON_ES || ord.market==models.market.M.AMAZON_UK ||ord.market==models.market.M.AMAZON_FR)
+    || (ord.market==models.market.M.AMAZON_IT && invoice?.europevat==models.market.OrderInvoice.VAT.EUROPE)}
+      <img src="http://127.0.0.1:9000/images/common/easyacc_logo.png" style="height:80%;width:80%">
+    #{/if}
+    #{if (ord.market==models.market.M.AMAZON_DE) || (ord.market==models.market.M.AMAZON_IT && (invoice==null ||
+    invoice.europevat!=models.market.OrderInvoice.VAT.EUROPE))}
+      <img src="http://127.0.0.1:9000/images/common/easyacc_logo.png" style="height:80%;width:80%">
+    #{/if}
     </td>
-  </tr>
-  <tr>
-    <td class="td1"></td>
-  </tr>
-  <tr>
-    <td></td>
-  </tr>
-  <tr>
-    <td></td>
   </tr>
   <tr>
     <td class="td1">
