--- a/core/app/views/ProcureUnits/_unit_table_trs.html
+++ b/core/app/views/ProcureUnits/_unit_table_trs.html
@@ -52,7 +52,7 @@
     <span class="add-on">箱</span>
     <input type="hidden" name="unit.attrs.qty" value="${unit.attrs.qty}">
     &nbsp;&nbsp;&nbsp;
-    <select id="cooperator" name="unit.cooperator.id">
+    <select id="cooperator" name="unit.cooperator.id" coop_value="${unit.cooperator.id}">
       <option value="">供应商参考</option>
     </select>
     <span id="coop_text"></span>
