--- a/core/app/views/ProcureUnits/_splitOnSelling.html
+++ b/core/app/views/ProcureUnits/_splitOnSelling.html
@@ -1,42 +1,60 @@
 <tr>
-  <th>#</th>
-  <td>&nbsp;</td>
-
-  <th>Selling</th>
-  <td>
-    ${unit.selling.sellingId}
+  <th style="width:15%;">Selling</th>
+  <td style="width:35%;">
+    <input type="text" name="unit.selling.sellingId" id="sellingId" style="width:300px;" value="${unit.selling?.sellingId}"
+    #{if unit.selling?.sellingId} readonly #{/if}>
   </td>
-
-  <th>SKU</th>
-  <td>${unit.sku}</td>
+  <th style="width:15%;">SKU</th>
+  <td style="width:35%;">
+    <input type="text" name="unit.product.sku" id="unit_sku" value="${unit.sku}"
+    #{if unit.sku} readonly #{/if} required></td>
 </tr>
 
 <tr>
-  <th>仓库</th>
+  <th>产品名称</th>
   <td>
-  ${unit.whouse.name}
+    <input type="text" id="productName" style="width:300px;" value="${unit.product?.abbreviation}"
+    #{if unit.product?.abbreviation} readonly #{/if}required>
   </td>
-
-  <th>供应商</th>
-  <td>${unit.cooperator.fullName}</td>
-
-  <th>采购数量</th>
-  <td>
-    <input type="text" name="newUnit.attrs.planQty" value="${newUnit.attrs.planQty}">
-  </td>
+  <th>阶段</th>
+  <td style="color:${unit.stage.rgb()}">${models.procure.ProcureUnit.STAGE.DELIVERY}</td>
 </tr>
 
+<tr>
+  <th>采购数量</th>
+  <td colspan="3">
+    <input type="text" class="input-mini" placeHolder="具体数量" name="unit.attrs.planQty" id="planQty"
+           value="${unit.attrs.planQty}">
+    <input type="text" id="box_num" class="input-mini" placeHolder="箱数">
+    <span class="add-on">箱</span>
+    <input type="hidden" name="unit.attrs.qty" value="${unit.attrs.qty}">
+    &nbsp;&nbsp;&nbsp;
+    <select id="cooperator" name="unit.cooperator.id" coop_value="${unit.cooperator?.id}">
+      <option value="">供应商参考</option>
+    </select>
+    <span id="coop_text"></span>
+  </td>
+</tr>
 <tr>
   <th>预计交货时间</th>
   <td>
     <input type="date" name="newUnit.attrs.planDeliveryDate" value="${newUnit.attrs.planDeliveryDate.date()}">
   </td>
-
+  <th>去往仓库</th>
+  <td>
+    <select name="unit.whouse.id" id="warehouse_select">
+      <option value="">请选择</option>
+    #{list items:whouses, as:'w'}
+      <option value="${w.id}">${w.name}</option>
+    #{/list}
+    </select>
+  </td>
+</tr>
+<tr>
   <th>预计运输时间</th>
   <td>
     <input type="date" name="newUnit.attrs.planShipDate" value="${newUnit.attrs.planShipDate.date()}">
   </td>
-
   <th>预计到库时间</th>
   <td>
     <input type="date" name="newUnit.attrs.planArrivDate" value="${newUnit.attrs.planArrivDate.date()}">
@@ -44,25 +62,23 @@
 </tr>
 
 <tr>
-  <th>单价</th>
-  <td>${unit.attrs.price} ${unit.attrs.currency.name()}</td>
-
-  <th>阶段</th>
-  <td>${models.procure.ProcureUnit.STAGE.DELIVERY}</td>
-
-  <th>采购单</th>
-  <td>
-    <a href="@{Deliveryments.show(unit.deliveryment.id)}" target="_blank">${unit.deliveryment.id}</a>
-  </td>
-</tr>
-
-<tr>
   <th>运输方式</th>
   <td>
-    ${unit.shipType.label()}
+  #{list items:models.procure.Shipment.T.values(), as:'t'}
+    <label class="radio">
+      <input type="radio" name="unit.shipType" value="${t.name()}" ${ t == unit.shipType ? 'checked': 'unchecked'}>${t.detail()}
+    </label>
+  #{/list}
   </td>
-
-  <th>是否到货代</th>
-  <td>#{yesOrNo f: unit.isPlaced/}</td>
-  <td colspan="2"></td>
+  <td colspan="2">
+  #{list items: unit.relateShipment()}
+    <div>
+      <a href="@{Shipments.show(_.id)}" target="_blank">${_.id} (${_.type.label()})</a>
+      <span><i class="icon-calendar"></i> #{time_tooltip time: _.dates.planBeginDate/}</span>
+      <span><i class="icon-calendar"></i> #{time_tooltip time: _.predictArriveDate()/}</span>
+    </div>
+  #{/list}
+  </td>
 </tr>
+
+
